# DPEcho

./: .gitignore  CITATION.cff  CMakeLists.txt  Device.cpp  Device.hpp  DeviceConfig.cpp  DeviceConfig.hpp  Domain.cpp  Domain.hpp  Grid.cpp  Grid.hpp  Logger.cpp  Logger.hpp  Metric.cpp  Metric.hpp  Output.cpp  Output.hpp  Parameters.cpp  Parameters.hpp  Physics.cpp  Physics.hpp  Problem.cpp  Problem.hpp  README.md  Solver.cpp  Solver.hpp  echo.cpp  echo.hpp  echoSycl.hpp  myDoxyfile.cmake
cmake/checks/: fscheck.cpp
cmake/modules/: FindVTune.cmake
examples/: alfven.par
tools/: LRZoneAPI2.sh  LRZoneAPI4.sh  as_oneAPI.sh  cleanBuild.sh  deltaEnergy.sh  job_cm2.bash  job_sng.bash  job_sng.bash~
utils/: tb-assert.hpp  tb-timer.hpp  tb-types.hpp
